@@ -429,6 +429,9 @@ let reset_cache_toplevel () =
 let set_unit_name name =
   current_unit := name
 
+let get_unit_name () =
+  !current_unit
+
 (* Lookup by identifier *)
 
 let rec find_module_descr path env =
